syntax = "proto3";

option csharp_namespace = "GrpcDemo";

package random;

// The random nunmber generator service definition.
service RandomNumber {
  // Sends a random number
  rpc GetRandomInteger (RandomIntegerRequest) returns (RandomIntegerReply);

  //Sends a stream of random numbers
  rpc GetRandomIntegerStream (RandomIntegerRequest) returns (stream RandomIntegerReply);
}

// The request message that defines the limits of random numbers
message RandomIntegerRequest {
  int32 lower_limit = 1;
  int32 upper_limit = 2;
}

// The response message containing the random number
message RandomIntegerReply {
  int32 random_integer = 1;
}
